--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -11,7 +11,7 @@ body {
 	background-color: #eeeeee;
 }
 .nav-bar {
-	background-color:#C77405;
+	background-color:#373a3d;
 	width: auto;
 	margin-left:10px;
 	margin-top:10px;
