--- a/includes/css/upload.css
+++ b/includes/css/upload.css
@@ -56,25 +56,27 @@ section, footer, header, aside{
     background-image:-moz-linear-gradient(top, #373a3d, #313437);
     background-image:linear-gradient(top, #373a3d, #313437);
 
-    width:250px;
-    padding:30px;
-    border-radius:3px;
+    width:auto;
+    padding:10px;
+    border-radius:1px;
 
-    margin:200px auto 100px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    margin:10px auto 10px;
+    
 }
 
 #drop{
     background-color: #2E3134;
-    padding: 40px 50px;
-    margin-bottom: 30px;
-    border: 20px solid rgba(0, 0, 0, 0);
-    border-radius: 3px;
+    padding: 20px 20px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: 2px solid rgba(0, 0, 0, 0);
+    border-radius: 1px;
     border-image: url('../img/border-image.png') 25 repeat;
     text-align: center;
     text-transform: uppercase;
 
-    font-size:16px;
+    font-size:12px;
     font-weight:bold;
     color:#7f858a;
 }
@@ -83,7 +85,7 @@ section, footer, header, aside{
     background-color:#007a96;
     padding:12px 26px;
     color:#fff;
-    font-size:14px;
+    font-size:10px;
     border-radius:2px;
     cursor:pointer;
     display:inline-block;
@@ -101,7 +103,7 @@ section, footer, header, aside{
 
 #upload ul{
     list-style:none;
-    margin:0 -30px;
+    margin:auto;
     border-top:1px solid #2b2e31;
     border-bottom:1px solid #3d4043;
 }
