edit uploader css

--- a/includes/css/upload.css
+++ b/includes/css/upload.css
@@ -60,16 +60,16 @@ section, footer, header, aside{
     padding:10px;
     border-radius:1px;
 
-    margin:10px auto 10px;
+    margin:2px auto 2px;
     
 }
 
 #drop{
     background-color: #2E3134;
-    padding: 20px 20px;
+    padding: 12px 12px;
     margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 2px;
+    margin-right: 2px;
     border: 2px solid rgba(0, 0, 0, 0);
     border-radius: 1px;
     border-image: url('../img/border-image.png') 25 repeat;
@@ -83,7 +83,7 @@ section, footer, header, aside{
 
 #drop a{
     background-color:#007a96;
-    padding:12px 26px;
+    padding:12px 12px;
     color:#fff;
     font-size:10px;
     border-radius:2px;
@@ -118,8 +118,8 @@ section, footer, header, aside{
 
     border-top:1px solid #3d4043;
     border-bottom:1px solid #2b2e31;
-    padding:15px;
-    height: 52px;
+    padding:5px;
+    height: 24px;
 
     position: relative;
 }
@@ -129,14 +129,14 @@ section, footer, header, aside{
 }
 
 #upload ul li p{
-    width: 144px;
+    width: auto;
     overflow: hidden;
     white-space: nowrap;
     color: #EEE;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 12px;
+    font-weight: normal;
     position: absolute;
-    top: 20px;
+    top: 1px;
     left: 100px;
 }
 
@@ -148,23 +148,23 @@ section, footer, header, aside{
 }
 
 #upload ul li canvas{
-    top: 15px;
+    top: 5px;
     left: 32px;
     position: absolute;
 }
 
 #upload ul li span{
-    width: 15px;
+    width: 12px;
     height: 12px;
     background: url('../img/icons.png') no-repeat;
     position: absolute;
-    top: 34px;
+    top: 5px;
     right: 33px;
     cursor:pointer;
 }
 
 #upload ul li.working span{
-    height: 16px;
+    height: 12px;
     background-position: 0 -12px;
 }
 
@@ -173,90 +173,4 @@ section, footer, header, aside{
 }
 
 
-/*----------------------------
-    The Demo Footer
------------------------------*/
 
-
-footer{
-    background-color: #080808;
-    bottom: 0;
-    box-shadow: 0 -1px 2px rgba(0,0,0,0.4);
-    height: 40px;
-    left: 0;
-    position: fixed;
-    width: 100%;
-    z-index: 100000;
-}
-
-footer h2{
-    font-size: 14px;
-    font-weight: normal;
-    position: absolute;
-    top:0;
-    left: 50%;
-    bottom:0;
-    margin-left: -420px;
-    padding:13px 20px 0;
-    border:1px solid #000;
-    border-width:0 1px;
-    background-color:rgba(0,0,0,0.6);
-    box-shadow:0 0 5px #000 inset;
-    line-height: 1;
-    margin-top: 0;
-}
-
-footer h2 a{
-    color: #EEEEEE !important;
-    text-decoration:none !important;
-}
-
-footer h2 i{
-    font-style:normal;
-    color:#888;
-}
-
-#tzine-download{
-    opacity:0.9;
-    background-color:#257691;
-    font-size:11px;
-    text-align:center;
-    text-transform:uppercase;
-    width:150px;
-    height:28px;
-    line-height:28px;
-    text-decoration:none !important;
-
-    display: inline-block;
-    border-radius: 2px;
-    color: #fff !Important;
-    font-weight: bold;
-    box-shadow: 0 -1px 2px #1e5e74 inset;
-
-    border-top:1px solid #26849c;
-
-    text-shadow:1px 1px 1px #1e6176;
-    margin-top:6px;
-}
-
-#tzine-download:hover{
-    opacity:1;
-}
-
-#tzine-actions{
-    position:absolute;
-    top:0;
-    width:500px;
-    right:50%;
-    margin-right:-420px;
-    text-align:right;
-}
-
-#tzine-actions iframe{
-    display: inline-block;
-    height: 21px;
-    width: 95px;
-    position: relative;
-    float: left;
-    margin-top: 11px;
-}
