--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -10,6 +10,12 @@
 body {
 	background-color: #eeeeee;
 }
+
+.content-iframe {
+	width: 100%;
+	height: auto;
+	
+}
 .nav-bar {
 	background-color:#373a3d;
 	width: auto;
@@ -38,5 +44,7 @@ body {
 	font-family:verdana, sans-serif; font-weight: bold;
 	font-size:12px;
 	color:#B4B4B4;
+	background-color:#373a3d;
+	border-bottom: 1px solid #000;
 	
 }
