--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -2,8 +2,9 @@
   
   background-color: #ffffff;
   width: 75%;
-  height: 75%;
+  height: 100%;
   position:absolute;
+  
 	
 }
 
@@ -13,7 +14,7 @@ body {
 
 .content-iframe {
 	width: 100%;
-	height: auto;
+	height: 100%;
 	
 }
 .nav-bar {
@@ -40,11 +41,43 @@ body {
 	
 }
 
+td {
+	padding:4px;
+	
+}
 .tbl-header {
 	font-family:verdana, sans-serif; font-weight: bold;
 	font-size:12px;
 	color:#B4B4B4;
 	background-color:#373a3d;
-	border-bottom: 1px solid #000;
-	
+	border-bottom: 1px solid #000;	
+	margin-left:4px;
+	margin-top:4px;
+	margin-right:4px;
+	margin-bottom:4px;
+}
+
+.tbl-content {
+	background-color:#373a3d;
+	width: auto;
+	height: auto;
+	margin-left:10px;
+	margin-top:10px;
+	margin-right:10px;
+	margin-bottom:10px;
+}
+
+.tbl-content-a {
+	font-family:verdana, sans-serif; font-weight: bold;
+	font-size:12px;
+	color:#373a3d;
+	background-color:#cccccc;
+	border-bottom: 1px solid #000;	
+}
+.tbl-content-b {
+	font-family:verdana, sans-serif; font-weight: bold;
+	font-size:12px;
+	color:#B4B4B4;
+	background-color:#373a3d;
+	border-bottom: 1px solid #000;	
 }
