--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -2,7 +2,7 @@
   
   background-color: #ffffff;
   width: 75%;
-  height: 100%;
+  height: auto;
   position:absolute;
   
 	
@@ -10,6 +10,73 @@
 
 body {
 	background-color: #eeeeee;
+}
+
+.content:hover {	
+	opacity: 0.8;
+}
+
+.content{
+	clear:left;
+	font-family:verdana, sans-serif; font-weight: bold;
+	font-size:12px;
+	color:#373a3d;
+	background-color: #eeeeee;	
+	height: 36px;
+	opacity: 0.5;
+	margin-bottom:2px;
+	
+}
+.content .content-a {
+	float:left;
+	margin-top:10px;
+	margin-left:4px;
+	width: 60%;	
+	
+}
+.content .content-b {
+	float:left;
+	margin-top:10px;
+	margin-left:4px;
+	width: 30%;	
+	
+}
+.content .content-c {
+	float:left;
+	margin-top:10px;
+	margin-left:4px;
+	width: auto;	
+	
+}
+
+.content-head {	
+	clear:left;
+	font-family:verdana, sans-serif; font-weight: bold;
+	font-size:12px;
+	color:#B4B4B4;
+	background-color:#373a3d;
+	border-bottom: 1px solid #eeeeee;		
+	height: 36px;
+	margin-bottom:2px;
+	
+}
+.content-head .content-head-a {
+	float:left;
+	margin-top:10px;
+	margin-left:4px;
+	width: 60%;	
+}
+.content-head .content-head-b {
+	float:left;
+	margin-top:10px;
+	margin-left:4px;
+	width: 30%;	
+}
+.content-head .content-head-c {
+	float:left;
+	margin-top:10px;
+	margin-left:4px;
+	width: auto;	
 }
 
 .content-iframe {
@@ -45,17 +112,6 @@ td {
 	padding:4px;
 	
 }
-.tbl-header {
-	font-family:verdana, sans-serif; font-weight: bold;
-	font-size:12px;
-	color:#B4B4B4;
-	background-color:#373a3d;
-	border-bottom: 1px solid #000;	
-	margin-left:4px;
-	margin-top:4px;
-	margin-right:4px;
-	margin-bottom:4px;
-}
 
 .tbl-content {
 	background-color:#373a3d;
@@ -67,17 +123,3 @@ td {
 	margin-bottom:10px;
 }
 
-.tbl-content-a {
-	font-family:verdana, sans-serif; font-weight: bold;
-	font-size:12px;
-	color:#373a3d;
-	background-color:#cccccc;
-	border-bottom: 1px solid #000;	
-}
-.tbl-content-b {
-	font-family:verdana, sans-serif; font-weight: bold;
-	font-size:12px;
-	color:#B4B4B4;
-	background-color:#373a3d;
-	border-bottom: 1px solid #000;	
-}
