Content reload rewrite

--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -154,6 +154,10 @@ td {
 	margin-right:10px;
 	width:18px;
 	height:18px;
+	content:url("../../img/refresh.png");
+}
+.refresh-btn:hover{
+	content:url("../../img/refresh-over.png");
 }
 .search-cb{
 	
