--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -181,3 +181,24 @@ td {
 	margin-right:10px;
 }
 
+.ccAlertBox{
+	position:absolute;	
+    border: 2px solid rgba(0, 0, 0, 0);
+    border-radius: 10px;
+    border-image: url('../img/border-image.png') 25 repeat;
+    text-align: center;    
+	width:auto;
+	height:auto;
+	background-color: #ffffff;	
+	opacity: 0.8;
+}
+.alertTH{
+	font-family:verdana, sans-serif; font-weight: bold;
+	background-color: #ee0000;	
+	color:#eeeeee;
+	opacity: 0.8;
+}
+.alertTD{
+	font-family:verdana, sans-serif; font-weight: normal;
+	height:150px;
+}
