--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -139,8 +139,9 @@ td {
 	margin-right:10px;
 }
 .search-input{
-	font-family:verdana, sans-serif; font-weight: normal;
+	font-family:verdana, sans-serif; font-weight: bold;
 	font-size:12px;
+	color:#999999;
 	margin-top:-5px;
 	margin-right:10px;
 	width:400px;
@@ -201,4 +202,39 @@ td {
 .alertTD{
 	font-family:verdana, sans-serif; font-weight: normal;
 	height:150px;
+}
+.settings-head{
+	background-color:#373a3d;
+	width: auto;
+	margin-left:10px;
+	margin-top:50px;
+	margin-right:10px;
+	margin-bottom:10px;
+	padding:10px;
+	color:#eeeeee;
+}
+.float-right{
+	float:right;
+}
+a:link { color:#fff; }
+a:visited { color:#fff; }
+
+.settings-btn{
+	font-family:verdana, sans-serif; font-weight: bold;
+	background-color:#007a96;
+    padding:12px 12px;
+    color:#ffffff;
+    font-size:12px;
+    border-radius:2px;
+    cursor:pointer;
+    display:inline-block;
+    margin-top:12px;
+    margin-bottom:12px;
+    margin-right:-20px;
+    line-height:1;
+    text-decoration: none;
+    
+}
+.settings-btn:hover {
+	background-color:#0986a3;
 }
