--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -25,8 +25,11 @@ body {
 	background-color: #eeeeee;	
 	height: 36px;
 	opacity: 0.5;
-	margin-bottom:2px;
-	
+	margin-bottom:2px;	
+}
+.content-red{
+		
+	background-color: #ff4444;	
 }
 .content .content-a {
 	float:left;
