--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -16,14 +16,20 @@ body {
 .content:hover {	
 	opacity: 0.8;
 }
-
+.mediainfos{
+	font-family:verdana, sans-serif; font-weight: normal;
+	font-size:10px;
+}
+.preview{
+	width:106px;
+}
 .content{
 	clear:left;
 	font-family:verdana, sans-serif; font-weight: bold;
 	font-size:12px;
 	color:#373a3d;
 	background-color: #eeeeee;	
-	height: 36px;
+	height: 100px;
 	opacity: 0.5;
 	margin-bottom:2px;	
 }
@@ -36,6 +42,7 @@ body {
 	margin-top:10px;
 	margin-left:4px;
 	width: 60%;	
+	height: auto;
 	
 }
 .content .content-b {
