--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -20,6 +20,10 @@ body {
 	font-family:verdana, sans-serif; font-weight: normal;
 	font-size:10px;
 }
+.ContentDescription{
+	font-family:verdana, sans-serif; font-weight: bold;
+	font-size:11px;
+}
 .preview{
 	width:106px;
 }
@@ -41,7 +45,7 @@ body {
 	float:left;
 	margin-top:10px;
 	margin-left:4px;
-	width: 60%;	
+	width: 70%;	
 	height: auto;
 	
 }
@@ -49,7 +53,7 @@ body {
 	float:left;
 	margin-top:10px;
 	margin-left:4px;
-	width: 30%;	
+	width: 20%;	
 	
 }
 .content .content-c {
@@ -77,13 +81,13 @@ body {
 	float:left;
 	margin-top:10px;
 	margin-left:4px;
-	width: 60%;	
+	width: 70%;	
 }
 .content-head .content-head-b {
 	float:left;
 	margin-top:10px;
 	margin-left:4px;
-	width: 30%;	
+	width: 20%;	
 }
 .content-head .content-head-c {
 	float:left;	
@@ -126,6 +130,15 @@ body {
 td {
 	padding:4px;
 	
+}
+
+.cmenu{
+	position:absolute;	
+	width:200px;
+	height:auto;
+	left:5000px;
+	top:5000px;
+	border: 1px solid #111111;
 }
 
 .tbl-content {
