--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -34,37 +34,21 @@ body {
 	color:#373a3d;
 	background-color: #eeeeee;	
 	height: 100px;
-	opacity: 0.5;
+	opacity: 0.7;
 	margin-bottom:2px;	
 }
 .content-red{
 		
 	background-color: #ff4444;	
 }
-.content .content-a {
-	float:left;
-	margin-top:10px;
-	margin-left:4px;
-	width: 70%;	
-	height: auto;
-	
-}
-.content .content-b {
-	float:left;
-	margin-top:10px;
-	margin-left:4px;
-	width: 20%;	
-	
-}
-.content .content-c {
-	float:left;
-	position: absolute;
-	right:20px;
+.content .content-a {	
 	margin-top:10px;
 	margin-left:4px;
 	width: auto;	
+	height: auto;
 	
 }
+
 
 .content-head {	
 	clear:left;
@@ -77,26 +61,12 @@ body {
 	margin-bottom:2px;
 	
 }
-.content-head .content-head-a {
-	float:left;
+.content-head .content-head-a {	
 	margin-top:10px;
 	margin-left:4px;
 	width: 70%;	
 }
-.content-head .content-head-b {
-	float:left;
-	margin-top:10px;
-	margin-left:4px;
-	width: 20%;	
-}
-.content-head .content-head-c {
-	float:left;	
-	position: absolute;
-	right:20px;
-	margin-top:10px;
-	margin-left:4px;
-	width: auto;	
-}
+
 
 .content-iframe {
 	width: 100%;
@@ -133,8 +103,13 @@ td {
 }
 
 .cmenu{
+	font-family:verdana, sans-serif; font-weight: bold;
+	font-size:12px;
+	color:#373a3d;
+	background-color: #eeeeee;		
+	margin-bottom:2px;	
 	position:absolute;	
-	width:200px;
+	width:auto;
 	height:auto;
 	left:5000px;
 	top:5000px;
@@ -167,7 +142,7 @@ td {
 	color:#999999;
 	margin-top:-5px;
 	margin-right:10px;
-	width:400px;
+	width:auto;
 	height:20px;
 	border: 1px solid #eeeeee;	
 	padding: 2px;
