--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -31,7 +31,7 @@ body {
 	font-size:12px;
 	color:#373a3d;
 	background-color: #eeeeee;	
-	height: 100px;
+	height: auto;
 	opacity: 0.7;
 	margin-bottom:1px;	
 }
