--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -1,9 +1,9 @@
 .mainDiv {
   
   background-color: #ffffff;
-  width: 75%;
-  height: auto;
-  position:absolute;	
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 
@@ -26,7 +26,7 @@ body {
 	width:106px;
 }
 .content{
-	clear:left;
+	
 	font-family:verdana, sans-serif; font-weight: bold;
 	font-size:12px;
 	color:#373a3d;
@@ -34,6 +34,7 @@ body {
 	height: auto;
 	opacity: 0.7;
 	margin-bottom:1px;	
+	
 }
 .content-red{
 		
@@ -55,8 +56,7 @@ body {
 	font-family:verdana, sans-serif; font-weight: bold;
 	font-size:12px;
 	color:#B4B4B4;
-	background-color:#373a3d;
-	border-bottom: 1px solid #eeeeee;		
+	background-color:#373a3d;	
 	height: 36px;
 	margin-bottom:2px;
 	
@@ -125,12 +125,12 @@ td {
 
 .tbl-content {
 	background-color:#373a3d;
-	width: auto;
-	height: auto;
+	width: auto;	
 	margin-left:10px;
 	margin-top:3px;
 	margin-right:10px;
 	margin-bottom:3px;
+
 }
 
 .search {
