--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -340,3 +340,9 @@ a:visited { color:#fff; }
 	width:50px;
 	background-color:gray;
 }
+.vTC {
+	float:left;
+	padding:10px;
+	font-family:verdana, sans-serif; font-weight: bold;	   
+	font-size:16px;
+}
