--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -1,18 +1,20 @@
 
 .mainDiv {
   
-  background-color: #ffffff;
+  background-color: #dddddd;
   width: 100%;
-  height: 100%;
-  
-  
+  height: 100%;  
   position:absolute;  
 }
 
 
-body {
-	background-color: #ffffff;
+body {	
+	background-color: #dddddd;
 }
+html {
+	background-color: #dddddd;
+}
+
 
 .content:hover {	
 	opacity: 0.8;
@@ -28,8 +30,7 @@ body {
 .preview{
 	width:106px;
 }
-.content{
-	
+.content{	
 	font-family:verdana, sans-serif; font-weight: bold;
 	font-size:12px;
 	color:#373a3d;
@@ -173,7 +174,7 @@ td {
 }
 .menubar {
 	width:100%;
-	background-color: #ffffff;	
+	background-color: #dddddd;	
 	margin-top:10px;
 	height:30px;
 	margin-right: 30px;
@@ -252,7 +253,7 @@ a:visited { color:#fff; }
 	-o-object-fit: contain;
 }
 .leftDiv {
-	width:65%;
+	width:75%;
 	float: left;
 	
 }
@@ -275,11 +276,11 @@ a:visited { color:#fff; }
 	margin-top: 5px;
 }
 .vPlayer {
-	
+	background-color:#373a3d;
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */	
 	height: 0;
-	margin:5px;
+	margin:0px;
 	
 }
 .aPlayer {
@@ -305,10 +306,10 @@ a:visited { color:#fff; }
 	height: 100%;
 }
 
-.vControlls{
+.vControls{
 	width:100%;
 	height:35px;
-	background-color: white;
+	background-color: #373a3d;
 }
 .jProcess{
 	width:100%;
@@ -345,4 +346,5 @@ a:visited { color:#fff; }
 	padding:10px;
 	font-family:verdana, sans-serif; font-weight: bold;	   
 	font-size:16px;
+	color:#dddddd;
 }
