--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -308,7 +308,7 @@ a:visited { color:#fff; }
 
 .vControls{
 	width:100%;
-	height:35px;
+	height:auto;
 	background-color: #373a3d;
 }
 .jProcess{
@@ -350,4 +350,46 @@ a:visited { color:#fff; }
 }
 .restartJob:hover{
 	cursor: pointer;
+}
+.cpadding{
+	padding:5px;
+	margin-top:5px;
+}
+.cplay{
+	float:left;
+	margin-left:5px;	
+	content:url("../../img/play.png")
+}
+.cplay:hover{
+	cursor: pointer;
+	content:url("../../img/playHover.png")
+}
+.cpause{
+	float:left;
+	margin-left:5px;	
+	content:url("../../img/pause.png");
+}
+.cpause:hover{
+	cursor: pointer;
+	content:url("../../img/pauseHover.png");
+}
+.cforward{
+	clear:left;
+}
+.cforward:hover{
+	cursor: pointer;
+	content:url("../../img/forwardHover.png");
+}
+.cback{
+	float:left;
+}
+.cback:hover{
+	cursor: pointer;
+	content:url("../../img/backwardHover.png");
+}
+.cslider{
+	width:100%;
+	height:30px;
+	background-color:#007A96;
+	opacity:0.4;
 }
