--- a/includes/css/cc.css
+++ b/includes/css/cc.css
@@ -50,7 +50,7 @@ html {
 }
 .content .content-a {	
 	margin-top:5px;
-	margin-left:4px;
+	margin-left:1px;
 	width: auto;	
 	height: auto;
 	word-break:break-all;
@@ -167,6 +167,7 @@ td {
 }
 .refresh-btn:hover{
 	content:url("../../img/refresh-over.png");
+	cursor: pointer;
 }
 .search-cb{
 	
@@ -217,7 +218,7 @@ td {
 	margin-left:10px;
 	margin-top:50px;
 	margin-right:20px;
-	margin-bottom:10px;
+	margin-bottom:20px;
 	padding:10px;
 	color:#eeeeee;
 }
